# python-template

./: README.md  cookiecutter.json  makefile  pyproject.toml
hooks/: pre_gen_project.py
{{cookiecutter.package}}/: .dockerignore  README.md  makefile
{{cookiecutter.package}}/tests/: conftest.py
