[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.package }}"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">=3.12"
classifiers = ["Programming Language :: Python :: 3.12"]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "pyright",
]

[tool.setuptools.package-dir]
{{ cookiecutter.package }} = "src/{{ cookiecutter.package }}"

[tool.setuptools.dynamic]
version = {attr = "src/.{{ cookiecutter.package }}.__version__"}

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"